[SmartLock] Remove outdated and incorrect test hacks in test.

Also only Initialize the EasyUnlockService in the test once the test
Profile object is ready.

This change is high-priority because without it, the fix for
crbug.com/953027 causes this test to fail (the incomplete Profile
caused DCHECKs in known_user.h to fail).

Bug: 857494, 953027
Change-Id: I5a389b3017e6428136295ccd6899ffc05c6c354b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1669762
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#672096}

Former-commit-id: 6ea2d57c00b0a20bd0e1932a4251832329859a60